--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ font-size: 16px;
 body{
     font-family: inter, Arial, Helvetica, sans-serif;
    font-size: 2.4rem;
-    color:var(--color-body)
+    color:var(--color-body);
 }
 h1,h2,h3{
     color: var(--color-headings);
@@ -37,4 +37,26 @@ p{
             font-size: 8rem;}
             h2{font-size: 4rem;}
             h3{font-size: 2.4rem; }
+}
+a{
+    text-decoration: none;
+}
+.link-arrow{
+    color: var(--color-accent);
+text-transform:uppercase ;
+font-size: 2rem;
+font-weight: bold;
+}
+.link-arrow::after{
+    content:'-->';
+    margin-left:5px;
+    transition: margin 0.15s;
+}
+.link-arrow:hover::after{
+    margin-left: 10px;
+}
+@media screen and (min-width:1024px){
+    .link-arrow{
+        font-size: 1.5rem;
+    }
 }
