--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,29 @@ font-weight: bold;
         font-size: 1.5rem;
     }
 }
+/*badges*/
+.badge{
+    border-radius: 20px;
+    padding: 0.5rem 2rem;
+    font-weight: 400;
+    white-space: nowrap;
+    font-size: 2rem;
+}
+.badge--primary{
+    background: var(--color-primary);
+    color: white;
+}
+.badge--secondary{
+    background: var(--color-secondary);
+    color: white;
+}
+.badge--small{
+    font-size: 1.6rem;
+}
+@media screen and (min-width :1024px){
+    .badge{
+        font-size: 1.5rem;}
+        .badge--small{
+            font-size: 1.2rem;
+        }
+}
