--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ display: inline-block;
 margin-right: 2rem;
 }
 .list--tick{
-list-style-image:url(../images/tick.svg);
+list-style-image:url(../icons/tick.svg);
 padding-left: 3rem;
 }
 .list--tick .list__item{
@@ -108,4 +108,22 @@ padding-left: 3rem;
     .list-tick .list__item{
         padding-left: 0;
     }
+}
+/*icons*/
+.icon{
+    width: 40px;
+    height: 40px;
+
+}
+.icon--primary{
+    fill:var(--color-primary);
+}
+.icon-container{
+background: #f3f9fa;
+width: 64px;
+height: 64px;
+border-radius: 100%;
+display: inline-flex;
+justify-content: center;
+align-items: center;
 }
