--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
     --color-headings:#1b0760;
     --color-body:#918ca4;
 }
+*,*::after, *::before{
+    box-sizing:border-box;
+}
 html{
 font-size: 16px;
 }
@@ -126,4 +129,48 @@ border-radius: 100%;
 display: inline-flex;
 justify-content: center;
 align-items: center;
+}
+/*Buttons*/
+.btn{
+    font-size: 1.8rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 2rem 3rem;
+    border: 0;
+    margin: 1rem 0;
+    border-radius: 40px;
+    white-space: nowrap;
+    cursor: pointer;
+    text-align: center;
+}
+.btn--primary{
+background: var(--color-primary);
+color: #fff;
+}
+.btn--primary:hover{
+background: #3a8ffd;
+
+}
+.btn--secondary{
+    background: var(--color-secondary);
+    color: #fff;
+}
+.btn--secondary:hover{
+    background:#00c8eb;
+}
+.btn--accent{
+    background: var(--color-accent);
+    color: #fff;
+}
+.btn--accent:hover{
+    background: #ec3000;
+}
+.btn--block{
+    width: 100%;
+display: inline-block;
+}
+@media screen and(min-width:1024px){
+    .btn{
+        font-size: 1.5rem;
+    }
 }
