building first plan

--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ font-weight: bold;
 }
 .badge--small{
     font-size: 1.6rem;
+    padding: 0.5rem 1.5rem;
 }
 @media screen and (min-width :1024px){
     .badge{
@@ -216,6 +217,53 @@ font-size: 1.5rem;
     background: var(--color-primary);
     color:#fff;
 }
+.card--secondary .card__header{
+    background: var(--color-secondary);
+    color:#fff;
+}
 .card__header, .card__body{
     padding: 2rem 3rem;
+}
+.card--secondary .badge--secondary{
+    background-color: #02cdf1;
+}
+/*plan*/
+.plan--popular .card__header{
+    position: relative;
+}
+.plan--popular .card__header::before{
+content: url(../icons/popular.svg);
+width: 40px;
+display: inline-block;
+position: absolute;
+top: -6px;
+right: 5%;
+}
+@media screen and (min-width:1024px){
+    .plan__name{
+        font-size: 1.5rem;
+    }
+}
+.plan__name{
+    color: white;
+    margin: 0;
+    font-weight: 500;
+    font-size: 2.4rem;
+}
+.plan__price{
+    font-size: 6rem;
+}
+.plan__billing-cycle{
+    font-size: 2.4rem;
+    font-weight: 300;
+    opacity: 0.8;
+    margin-right: 1rem;
+}
+.plan__description{
+    font-size: 1.5rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+.plan--popular{
+
 }
