--- a/css/style.css
+++ b/css/style.css
@@ -122,8 +122,15 @@ padding-left: 3rem;
     height: 40px;
 
 }
+.icon--smal{
+    height: 30px;
+    width: 30px;
+}
 .icon--primary{
     fill:var(--color-primary);
+}
+.icon--white{
+    fill:white;
 }
 .icon-container{
 background: #f3f9fa;
@@ -133,6 +140,9 @@ border-radius: 100%;
 display: inline-flex;
 justify-content: center;
 align-items: center;
+}
+.icon-container--accent{
+    background: var(--color-accent);
 }
 /*Buttons*/
 .btn{
@@ -331,5 +341,28 @@ right: 5%;
 @media screen and (min-width:1024px){
     .grid--cols-3{
         grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+/*testimonials*/
+.testimonial{
+    padding: 3rem;
+
+}
+.testimonial__image{
+    position: relative;
+}
+.testimonial__image>img{
+    width: 100%;
+}
+.testimonial__image>.icon-container{
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+}
+@media screen and (min-width:1024px){
+    .testimonial .quote,
+    .testimonial .quote__author{font-size: 2.4rem;}
+    .testimonial .quote{
+        margin-left: 6rem;
     }
 }
