--- a/css/style.css
+++ b/css/style.css
@@ -404,3 +404,30 @@ right: 5%;
         margin: 0 2rem;
     }
 }
+/*collapsibles*/
+.collapsible__header{
+    display: flex;
+    justify-content: space-between;
+     
+}
+.collapsible__heading{
+margin-top: 0;
+font-size: 2rem;
+}
+.collapsible__chevron{
+transform: rotate(-90deg);
+transition: transform 0.3s;
+}
+.collapsible__contet{
+ max-height: 0;
+ overflow: hidden;
+ transition: all .3s;
+ opacity: 0;
+}
+.collapsible--expanded .collapsible__chevron{
+    transform: rotate(0);
+}
+.collapsible--expanded .collapsible__contet{
+    max-height: 100vh;
+    opacity: 1;
+}
