--- a/css/style.css
+++ b/css/style.css
@@ -1,433 +1,467 @@
-:root{
-    --color-primary:#2584ff;
-    --color-secondary:#00d9ff;
-    --color-accent:#ff3400;
-    --color-headings:#1b0760;
-    --color-body:#918ca4;
-    --color-body-darker:#5c5577;
-    --color-border:#ccc;
-    --border-radius:40px
+:root {
+  --color-primary: #2584ff;
+  --color-secondary: #00d9ff;
+  --color-accent: #ff3400;
+  --color-headings: #1b0760;
+  --color-body: #918ca4;
+  --color-body-darker: #5c5577;
+  --color-border: #ccc;
+  --border-radius: 40px;
 }
-*,*::after, *::before{
-    box-sizing:border-box;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
 }
-html{
-font-size: 16px;
+html {
+  font-size: 16px;
 }
-body{
-    font-family: inter, Arial, Helvetica, sans-serif;
-   font-size: 2.4rem;
-    color:var(--color-body);
+body {
+  font-family: inter, Arial, Helvetica, sans-serif;
+  font-size: 2.4rem;
+  color: var(--color-body);
 }
-h1,h2,h3{
-    color: var(--color-headings);
-    margin-bottom: 1rem;
+h1,
+h2,
+h3 {
+  color: var(--color-headings);
+  margin-bottom: 1rem;
 }
-h1{
-    font-size: 1rem;
+h1 {
+  font-size: 1rem;
 }
-h2{
+h2 {
+  font-size: 4rem;
+}
+h3 {
+  font-size: 3rem;
+}
+p {
+  margin-top: 0;
+}
+@media screen and (min-width: 1024px) {
+  body {
+    font-size: 1.8rem;
+  }
+  h1 {
+    font-size: 8rem;
+  }
+  h2 {
     font-size: 4rem;
+  }
+  h3 {
+    font-size: 2.4rem;
+  }
 }
-h3{
-    font-size: 3rem;
-
+a {
+  text-decoration: none;
 }
-p{
-    margin-top: 0;
+.link-arrow {
+  color: var(--color-accent);
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: bold;
 }
-@media screen and (min-width:1024px){
-    body{
-        font-size: 1.8rem;}
-        h1{
-            font-size: 8rem;}
-            h2{font-size: 4rem;}
-            h3{font-size: 2.4rem; }
+.link-arrow::after {
+  content: "-->";
+  margin-left: 5px;
+  transition: margin 0.15s;
 }
-a{
-    text-decoration: none;
+.link-arrow:hover::after {
+  margin-left: 10px;
 }
-.link-arrow{
-    color: var(--color-accent);
-text-transform:uppercase ;
-font-size: 2rem;
-font-weight: bold;
-}
-.link-arrow::after{
-    content:'-->';
-    margin-left:5px;
-    transition: margin 0.15s;
-}
-.link-arrow:hover::after{
-    margin-left: 10px;
-}
-@media screen and (min-width:1024px){
-    .link-arrow{
-        font-size: 1.5rem;
-    }
+@media screen and (min-width: 1024px) {
+  .link-arrow {
+    font-size: 1.5rem;
+  }
 }
 /*badges*/
-.badge{
-    border-radius: 20px;
-    padding: 0.5rem 2rem;
-    font-weight: 400;
-    white-space: nowrap;
-    font-size: 2rem;
+.badge {
+  border-radius: 20px;
+  padding: 0.5rem 2rem;
+  font-weight: 400;
+  white-space: nowrap;
+  font-size: 2rem;
 }
-.badge--primary{
-    background: var(--color-primary);
-    color: white;
+.badge--primary {
+  background: var(--color-primary);
+  color: white;
 }
-.badge--secondary{
-    background: var(--color-secondary);
-    color: white;
+.badge--secondary {
+  background: var(--color-secondary);
+  color: white;
 }
-.badge--small{
-    font-size: 1.6rem;
-    padding: 0.5rem 1.5rem;
+.badge--small {
+  font-size: 1.6rem;
+  padding: 0.5rem 1.5rem;
 }
-@media screen and (min-width :1024px){
-    .badge{
-        font-size: 1.5rem;}
-        .badge--small{
-            font-size: 1.2rem;
-        }
+@media screen and (min-width: 1024px) {
+  .badge {
+    font-size: 1.5rem;
+  }
+  .badge--small {
+    font-size: 1.2rem;
+  }
 }
 /*lists*/
-.list{
-    list-style: none;
+.list {
+  list-style: none;
+  padding-left: 0;
+  color: var(--color-headings);
+}
+.list--inline .list__item {
+  display: inline-block;
+  margin-right: 2rem;
+}
+.list--tick {
+  list-style-image: url(../icons/tick.svg);
+  padding-left: 3rem;
+}
+.list--tick .list__item {
+  padding-left: 0.5rem;
+  margin-bottom: 1rem;
+}
+@media screen and(min-width:1024px) {
+  .list-tick .list__item {
     padding-left: 0;
-    color: var(--color-headings);
-}
-.list--inline .list__item{
-display: inline-block;
-margin-right: 2rem;
-}
-.list--tick{
-list-style-image:url(../icons/tick.svg);
-padding-left: 3rem;
-}
-.list--tick .list__item{
-    padding-left: 0.5rem;
-    margin-bottom: 1rem;
-}
-@media screen and(min-width:1024px){
-    .list-tick .list__item{
-        padding-left: 0;
-    }
+  }
 }
 /*icons*/
-.icon{
-    width: 40px;
-    height: 40px;
-
+.icon {
+  width: 40px;
+  height: 40px;
 }
-.icon--smal{
-    height: 30px;
-    width: 30px;
+.icon--smal {
+  height: 30px;
+  width: 30px;
 }
-.icon--primary{
-    fill:var(--color-primary);
+.icon--primary {
+  fill: var(--color-primary);
 }
-.icon--white{
-    fill:white;
+.icon--white {
+  fill: white;
 }
-.icon-container{
-background: #f3f9fa;
-width: 64px;
-height: 64px;
-border-radius: 100%;
-display: inline-flex;
-justify-content: center;
-align-items: center;
+.icon-container {
+  background: #f3f9fa;
+  width: 64px;
+  height: 64px;
+  border-radius: 100%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
-.icon-container--accent{
-    background: var(--color-accent);
+.icon-container--accent {
+  background: var(--color-accent);
 }
 /*Buttons*/
-.btn{
-    font-size: 1.8rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    padding: 2rem 3rem;
-    border: 0;
-    margin: 1rem 0;
-    border-radius: 40px;
-    white-space: nowrap;
-    cursor: pointer;
-    text-align: center;
+.btn {
+  font-size: 1.8rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 2rem 3rem;
+  border: 0;
+  margin: 1rem 0;
+  border-radius: 40px;
+  white-space: nowrap;
+  cursor: pointer;
+  text-align: center;
 }
-.btn--primary{
-background: var(--color-primary);
-color: #fff;
+.btn--primary {
+  background: var(--color-primary);
+  color: #fff;
 }
-.btn--primary:hover{
-background: #3a8ffd;
-
+.btn--primary:hover {
+  background: #3a8ffd;
 }
-.btn--secondary{
-    background: var(--color-secondary);
-    color: #fff;
+.btn--secondary {
+  background: var(--color-secondary);
+  color: #fff;
 }
-.btn--secondary:hover{
-    background:#00c8eb;
+.btn--secondary:hover {
+  background: #00c8eb;
 }
-.btn--accent{
-    background: var(--color-accent);
-    color: #fff;
+.btn--accent {
+  background: var(--color-accent);
+  color: #fff;
 }
-.btn--accent:hover{
-    background: #ec3000;
+.btn--accent:hover {
+  background: #ec3000;
 }
-.btn--long{
-    padding-left: 6rem;
-    padding-right: 6rem;
+.btn--long {
+  padding-left: 6rem;
+  padding-right: 6rem;
 }
-.btn--block{
-    width: 100%;
-display: inline-block;
+.btn--block {
+  width: 100%;
+  display: inline-block;
 }
-@media screen and (min-width:1024px){
-    .btn{
-        font-size: 1.5rem;
-    }
+@media screen and (min-width: 1024px) {
+  .btn {
+    font-size: 1.5rem;
+  }
 }
 /*inputs*/
-.input{
-    padding: 1.5rem 3.5rem;
-    border: 1px solid var(--color-border);
-border-radius:var(--border-radius);
-outline: 0;
-color: var(--color-headings);
-font-size: 1.5rem;
+.input {
+  padding: 1.5rem 3.5rem;
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+  outline: 0;
+  color: var(--color-headings);
+  font-size: 1.5rem;
 }
-.input-group .input{
-    border: 0;
-    flex-grow: 1;
-    padding: 1rem 1rem;
+.input-group .input {
+  border: 0;
+  flex-grow: 1;
+  padding: 1rem 1rem;
 }
-::placeholder{
-    color: #cdcbd7;
+::placeholder {
+  color: #cdcbd7;
 }
-.input-group{
-    border: 1px solid var(--color-border);
-    border-radius:var(--border-radius);
-    display: flex;
+.input-group {
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+  display: flex;
 }
-.input-group .btn{
-    margin: 4px;
+.input-group .btn {
+  margin: 4px;
 }
-@media screen and (min-width:1024px){
-    .input{
-        font-size: 2rem;
-    }
+@media screen and (min-width: 1024px) {
+  .input {
+    font-size: 2rem;
+  }
 }
 /*card*/
-.card{
-    border-radius: 7px;
-    box-shadow:0 0 20px 10px #f3f3f3;
-    overflow: hidden;
+.card {
+  border-radius: 7px;
+  box-shadow: 0 0 20px 10px #f3f3f3;
+  overflow: hidden;
 }
-.card--primary .card__header{
-    background: var(--color-primary);
-    color:#fff;
+.card--primary .card__header {
+  background: var(--color-primary);
+  color: #fff;
 }
-.card--secondary .card__header{
-    background: var(--color-secondary);
-    color:#fff;
+.card--secondary .card__header {
+  background: var(--color-secondary);
+  color: #fff;
 }
-.card__header, .card__body{
-    padding: 2rem 3rem;
+.card__header,
+.card__body {
+  padding: 2rem 3rem;
 }
-.card--secondary .badge--secondary{
-    background-color: #02cdf1;
+.card--secondary .badge--secondary {
+  background-color: #02cdf1;
 }
 /*plan*/
-.plan--popular .card__header{
-    position: relative;
+.plan--popular .card__header {
+  position: relative;
 }
-.plan--popular .card__header::before{
-content: url(../icons/popular.svg);
-width: 40px;
-display: inline-block;
-position: absolute;
-top: -6px;
-right: 5%;
+.plan--popular .card__header::before {
+  content: url(../icons/popular.svg);
+  width: 40px;
+  display: inline-block;
+  position: absolute;
+  top: -6px;
+  right: 5%;
 }
-@media screen and (min-width:1024px){
-    .plan__name{
-        font-size: 1.5rem;
-    }
-}
-.plan__name{
-    color: white;
-    margin: 0;
-    font-weight: 500;
-    font-size: 2.4rem;
-}
-.plan__price{
-    font-size: 6rem;
-}
-.plan__billing-cycle{
-    font-size: 2.4rem;
-    font-weight: 300;
-    opacity: 0.8;
-    margin-right: 1rem;
-}
-.plan__description{
+@media screen and (min-width: 1024px) {
+  .plan__name {
     font-size: 1.5rem;
-    font-weight: 300;
-    letter-spacing: 1px;
+  }
 }
-.plan--popular{
+.plan__name {
+  color: white;
+  margin: 0;
+  font-weight: 500;
+  font-size: 2.4rem;
+}
+.plan__price {
+  font-size: 6rem;
+}
+.plan__billing-cycle {
+  font-size: 2.4rem;
+  font-weight: 300;
+  opacity: 0.8;
+  margin-right: 1rem;
+}
+.plan__description {
+  font-size: 1.5rem;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+.plan--popular {
 }
 /*media*/
-.media{
-    display: flex;
+.media {
+  display: flex;
 }
-.media__title{
-    margin-top: 0;
+.media__title {
+  margin-top: 0;
 }
-.media__body{
-    margin: 0 1rem;
+.media__body {
+  margin: 0 1rem;
 }
-.media__image{
-    margin-top: 1rem;
+.media__image {
+  margin-top: 1rem;
 }
 /*quotes*/
-.quote{
-    font-size: 2.5rem;
-    font-style: italic;
-    color:var(--color-body-darker);
-    line-height: 1.3;
+.quote {
+  font-size: 2.5rem;
+  font-style: italic;
+  color: var(--color-body-darker);
+  line-height: 1.3;
 }
-.quote__text::before{
-    content: open-quote;
+.quote__text::before {
+  content: open-quote;
 }
-.quote__text::after{
-    content: close-quote;
+.quote__text::after {
+  content: close-quote;
 }
-.quote__author{
-    font-size: 3rem;
-    font-weight: 500;
-    font-style: normal;
+.quote__author {
+  font-size: 3rem;
+  font-weight: 500;
+  font-style: normal;
 }
-.quote__company{
-    color: var(--color-headings);
-    opacity:0.2;
+.quote__company {
+  color: var(--color-headings);
+  opacity: 0.2;
+  font-size: 2rem;
+  font-style: normal;
+}
+.quote__line {
+  position: relative;
+  bottom: 10;
+}
+@media screen and (min-width: 1024px) {
+  .quote {
     font-size: 2rem;
-    font-style: normal;
-}
-.quote__line{
-    position: relative;
-    bottom: 10;
-}
-@media screen and (min-width:1024px){
-    .quote{
-        font-size: 2rem;
-    }
-    .quote__author{
-        font-size: 2.4rem;
-    }
-    .quote__company{
-        font-size: 1.6rem;
-    }
+  }
+  .quote__author {
+    font-size: 2.4rem;
+  }
+  .quote__company {
+    font-size: 1.6rem;
+  }
 }
 /*Grids*/
-.grid{
-    display: grid;
+.grid {
+  display: grid;
 }
-@media screen and (min-width:768px){
-    .grid--cols-2{
-        grid-template-columns: 1fr 1fr;
-    }
+@media screen and (min-width: 768px) {
+  .grid--cols-2 {
+    grid-template-columns: 1fr 1fr;
+  }
 }
-@media screen and (min-width:1024px){
-    .grid--cols-3{
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+@media screen and (min-width: 1024px) {
+  .grid--cols-3 {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 /*testimonials*/
-.testimonial{
-    padding: 3rem;
-
+.testimonial {
+  padding: 3rem;
 }
-.testimonial__image{
-    position: relative;
+.testimonial__image {
+  position: relative;
 }
-.testimonial__image>img{
-    width: 100%;
+.testimonial__image > img {
+  width: 100%;
 }
-.testimonial__image>.icon-container{
-    position: absolute;
-    top: 3rem;
-    right: -32px;
+.testimonial__image > .icon-container {
+  position: absolute;
+  top: 3rem;
+  right: -32px;
 }
-@media screen and (min-width:1024px){
-    .testimonial .quote,
-    .testimonial .quote__author{font-size: 2.4rem;}
-    .testimonial .quote{
-        margin-left: 6rem;
-    }
+@media screen and (min-width: 1024px) {
+  .testimonial .quote,
+  .testimonial .quote__author {
+    font-size: 2.4rem;
+  }
+  .testimonial .quote {
+    margin-left: 6rem;
+  }
 }
 /*callouts*/
-.callout{
-    padding: 4rem;
-    border-radius: 5px;
+.callout {
+  padding: 4rem;
+  border-radius: 5px;
 }
-.callout--primary{
-    background: var(--color-primary);
-    color: #fff;
+.callout--primary {
+  background: var(--color-primary);
+  color: #fff;
 }
-.callout__heading{
-    color: white;
-    margin-top: 0;
-    font-size: 3rem;
+.callout__heading {
+  color: white;
+  margin-top: 0;
+  font-size: 3rem;
 }
-.callout .btn{
-    justify-self:center;
-    align-self: center;
-
+.callout .btn {
+  justify-self: center;
+  align-self: center;
 }
-.callout__content{
-    text-align:center;
+.callout__content {
+  text-align: center;
 }
-@media screen and (min-width:768px){
-    callout .grid--cols-2{
-        grid-template-columns: 1fr auto;
-    }
-    .callout__content{
-        text-align: left;
-    }
-    .callout .btn{
-        justify-self: start;
-        margin: 0 2rem;
-    }
+@media screen and (min-width: 768px) {
+  callout .grid--cols-2 {
+    grid-template-columns: 1fr auto;
+  }
+  .callout__content {
+    text-align: left;
+  }
+  .callout .btn {
+    justify-self: start;
+    margin: 0 2rem;
+  }
 }
 /*collapsibles*/
-.collapsible__header{
-    display: flex;
-    justify-content: space-between;
-     
+.collapsible__header {
+  display: flex;
+  justify-content: space-between;
 }
-.collapsible__heading{
-margin-top: 0;
-font-size: 2rem;
+.collapsible__heading {
+  margin-top: 0;
+  font-size: 2rem;
 }
-.collapsible__chevron{
-transform: rotate(-90deg);
-transition: transform 0.3s;
+.collapsible__chevron {
+  transform: rotate(-90deg);
+  transition: transform 0.3s;
 }
-.collapsible__contet{
- max-height: 0;
- overflow: hidden;
- transition: all .3s;
- opacity: 0;
+.collapsible__contet {
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3s;
+  opacity: 0;
 }
-.collapsible--expanded .collapsible__chevron{
-    transform: rotate(0);
+.collapsible--expanded .collapsible__chevron {
+  transform: rotate(0);
 }
-.collapsible--expanded .collapsible__contet{
-    max-height: 100vh;
-    opacity: 1;
+.collapsible--expanded .collapsible__contet {
+  max-height: 100vh;
+  opacity: 1;
+}
+/*Blocks*/
+.block {
+  --pading-vertical: 6rem;
+  padding: var(--pading-vertical) 2rem;
+}
+.block__heading {
+  margin-top: 0;
+}
+.block__header{
+text-align: center;
+}
+.block--dark {
+  background: #000;
+  color: #7b858b;
+}
+.block--dark .block__heading {
+  color: white;
+}
+.block--skewed-right {
+  padding-bottom:10rem;
+  clip-path: polygon(0% 0%, 100% 0%, 99% 99%, 0% 73%);
+}
+.container{
+    max-width:1140px;
+    margin: 0 auto;
 }
