--- a/css/style.css
+++ b/css/style.css
@@ -447,8 +447,8 @@ a {
 .block__heading {
   margin-top: 0;
 }
-.block__header{
-text-align: center;
+.block__header {
+  text-align: center;
 }
 .block--dark {
   background: #000;
@@ -458,10 +458,60 @@ text-align: center;
   color: white;
 }
 .block--skewed-right {
-  padding-bottom:10rem;
+  padding-bottom: 10rem;
   clip-path: polygon(0% 0%, 100% 0%, 99% 99%, 0% 73%);
 }
-.container{
-    max-width:1140px;
-    margin: 0 auto;
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+/*navigation*/
+.nav {
+  background: black;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 1rem;
+}
+.nav__list {
+  width: 100%;
+  margin: 0;
+  max-height: 100%;
+  opacity: 1;
+}
+.nav__item {
+  padding: 0.5rem 2rem;
+  color: #d2d0db;
+  border: 1px solid #222;
+}
+.nav__item > a {
+  color: #d2d0db;
+  transition: color 0.3s;
+}
+.nav__item > a:hover {
+  color: #d2d0db;
+  color: white;
+}
+.nav__toggler {
+  opacity: 0.5;
+  transition: box-shadow 0.15s;
+  cursor: pointer;
+}
+.nav.collapsible--expanded .nav__toggler {
+  opacity: 1;
+  box-shadow: 0 0 0 3px #666;
+  border-radius: 5px;
+}
+@media screen and (min-width: 768px){
+  .nav__toggler{
+    display: none;
+  }
+  .nav__list{
+    width: auto;
+    display: flex;
+    font-size: 1.6rem;
+  }
+  .nav__item{
+    border: 0;
+  }
 }
